--- a/Hands_on_Data_Curation_and_ETL.ipynb
+++ b/Hands_on_Data_Curation_and_ETL.ipynb
@@ -1008,6 +1008,7 @@
       "id": "7f2a8764",
       "metadata": {},
       "source": [
+        "August have much higher tempreture than January in 2023 (That applies for nearly every place on the north hemisphere:)\n",
         "Based on the data acquired, global warming seems to be a false statement."
       ]
     },
